[package]
name = "wasm"
version = "0.1.0"
authors = ["Rupas1k <artem-rupasov@ya.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
linfa = "0.6.1"
linfa-clustering = "0.6.1"
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version= "0.2.68", features = ["serde-serialize"] }

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
